Move to the clojure-finance Onyx fork and JDK 17+ (#70)
Depend on com.github.clojure-finance/onyx 0.16.0 instead of the archived
org.onyxplatform/onyx 0.14.6, which cannot start on JDK 17 or newer.
Requires --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED for Aeron's
Agrona; documented in the README. Clojure 1.11.1, javac --release 17.
Add a Clojars deploy repository that reads credentials from the
environment.

Make onyx-comps/shutdown safe after a partial startup so one failed
compute no longer leaves ZooKeeper's port bound for the rest of the JVM,
with a regression test. Add the missing outer-join fixture 1-12.csv,
create the gitignored test output directory from the tests, and stop the
join tests writing to the non-existent resources/ directory.

Version 2.0.3.